# APAN5560_sps_genai

./: .gitignore  README.md  main.py
app/: __init__.py  main.py  spacy_embed.py
assignment1/: pyproject.toml
assignment1/app/: bigram_model.py
assignment2/: Dockerfile  README.md  app.py  pyproject.toml  test_cnn64.py  train_cnn64.py
assignment2/checkpoints/: cnn64_cifar10.pth
assignment2/helper_lib/: __init__.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
assignment3/: Dockerfile  README.md  app.py  pyproject.toml  train_gan.py
assignment3/checkpoints/: gan_generator.pth
assignment3/helper_gan/: __init__.py  data.py  models.py  trainer.py  utils.py
helper_lib/: __init__.py  data_loader.py  evaluator.py  main.py  model.py  trainer.py  utils.py
