[project]
name = "sps_genai"
version = "0.1.0"
description = "FastAPI + Bigram model + spaCy embeddings"
authors = [{ name = "Siliang Ma" }]
requires-python = ">=3.12"

dependencies = [
  "en-core-web-lg",
  "fastapi[standard]",
  "spacy",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz" }
