[project]
name = "cifar10-fastapi"
version = "0.1.0"
description = "CIFAR10 image classifier with FastAPI deployment"
authors = [
  { name = "Siliang Ma" }
]
requires-python = ">=3.12"

dependencies = [
  "torch",
  "torchvision",
  "fastapi",
  "uvicorn",
  "pillow",
  "python-multipart",
  "matplotlib"
]

[tool.uv]
# ensures uv picks Python 3.12
python-preference = "only-managed"